[package]
name = "spinout"
version = "0.0.11"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = ["Julius Koskela <me@juliuskoskela.dev>"]

description = """
A thread-safe clonable and mutable smart-pointer akin to `Arc<Mutex<T>>`,
using spin-lock instead of system futex.
"""

repository = "https://github.com/juliuskoskela/gdsl"

keywords = ["data-structures", "concurrency", "parallel", "smart-pointer"]
categories = ["data-structures", "concurrency"]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false