[package]
name = "spinout"
version = "0.0.12"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = ["Julius Koskela <me@juliuskoskela.dev>"]

description = """
A thread-safe clonable and mutable smart-pointer akin to `Arc<Mutex<T>>`,
using spin-lock instead of system futex.
"""

repository = "https://github.com/juliuskoskela/spinout"

keywords = ["data-structures", "concurrency", "parallel", "smart-pointer"]
categories = ["data-structures", "concurrency"]

[dependencies]
libc = "0.2"
cfg-if = "1.0.0"
errno = "0.2.8"
rand = "0.8.4"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rayon = "1.5.3"

[[bench]]
name = "benches"
harness = false